mettre en place les blocs essentiels

--- a/pug/templates/_layout.pug
+++ b/pug/templates/_layout.pug
@@ -1,6 +1,6 @@
 mjml
     mj-head
-        mj-title Lettre Ecosup Assurance - Entreprise Juillet 2024
+        mj-title Lettre Ecosup Assurance - Entreprise Août 2024
         mj-attributes
             mj-all(font-family='Arial, Helvetica, sans-serif')/
             mj-text(font-size='16px' font-weight='300' line-height='20px' color='#2D3748')/
@@ -25,19 +25,19 @@ mjml
         block hero
             include ../includes/_hero
         //- block dossier
-        block dossier
+            block dossier
             include ../includes/_dossier
         //- block Article1
-        block article1
+            block article1
             include ../includes/_article1
         //- block article2
-        block article2
+            block article2
             include ../includes/_article2
         //- block article3
-        block article3
+            block article3
             include ../includes/_article3
         //- block article4
-        block article4
+            block article4
             include ../includes/_article4
         //- block footer
         block content
