--- a/pug/templates/_layout.pug
+++ b/pug/templates/_layout.pug
@@ -2,6 +2,9 @@ mjml
     mj-head
         mj-title Lettre Ecosup Assurance - Entreprise Août 2024
         mj-attributes
+            //-background-color
+            //- font
+            //- compoment
             mj-all(font-family='Arial, Helvetica, sans-serif')/
             mj-text(font-size='16px' font-weight='300' line-height='20px' color='#2D3748')/
         mj-raw.
