finalisation du bloc formation

--- a/pug/templates/_layout.pug
+++ b/pug/templates/_layout.pug
@@ -21,6 +21,8 @@ mjml
            }
             
     mj-body(background-color='#fcfcfc')
+        //- block content
+        block content
         //- block esa
         block esa
             include ../includes/_esa
@@ -28,14 +30,14 @@ mjml
         block hero
             include ../includes/_hero
         //- block dossier
-            block dossier
-            include ../includes/_dossier
-        //- block Article1
-            block article1
-            include ../includes/_article1
-        //- block article2
-            block article2
-            include ../includes/_article2
+        block edito
+            include ../includes/_edito
+        //- block cvbook
+        block cvBook
+            include ../includes/_cvbook
+        //- block form
+        block form
+            include ../includes/_form
         //- block article3
             block article3
             include ../includes/_article3
@@ -43,4 +45,5 @@ mjml
             block article4
             include ../includes/_article4
         //- block footer
-        block content
+        block footer
+            include ../includes/_footer
