--- a/mjml/index.mjml
+++ b/mjml/index.mjml
@@ -58,6 +58,58 @@
         <mj-text padding="5px 10px" align="left" font-size="16px" font-weight="300" color="#2D3748"><span style="font-weight:700;text-transform:uppercase">News Ecosup Assurance</span> | Août 2024  </mj-text>
       </mj-column>
     </mj-section>
+    <mj-section background-color="#EDF2F7" padding="0px">
+      <mj-column width="100%">
+        <mj-image padding="0" border="none" fluid-on-mobile="true" width="600px" target="_blank" src="https://i.ibb.co/Gkm0KKB/news-Bandeau082024.jpg" alt="Groupe d'étudiants entrain de discuter avec portrait de Christian ANNALORO, responsable pédagogique d'Ecosup Assurance"/>
+      </mj-column>
+    </mj-section>
+    <mj-section background-color="#EDF2F7" padding-top="10px" padding-bottom="40px">
+      <mj-column width="88%"> 
+        <mj-text padding-top="5px" padding-bottom="0" font-size="14px" font-weight="900" line-height="18px" text-transform="uppercase" color="#944694">Édito</mj-text>
+        <mj-text padding-top="5px" padding-bottom="0" font-style="italic" font-size="20px" font-weight="700" line-height="24px" color="#684092">Un nouvelle promotion, de nouvelles opportunités : la rentrée 2024</mj-text>
+        <mj-text padding-top="5px" padding-bottom="0" font-style="italic" font-size="16px" font-weight="500" line-height="20px" color="#2D3748">Chers partenaires,</mj-text>
+        <mj-text padding-top="5px" padding-bottom="0" font-style="italic" font-size="16px" font-weight="500" line-height="20px" color="#2D3748">C'est avec une grande satisfaction que nous accueillons dès ce mercredi 4 septembre une partie de nos nouvelles promotions d'étudiants qui intégrerons pour certains d'entre-eux vos entreprises. Nous sommes convaincus que cette nouvelle collaboration sera fructueuse pour tous.</mj-text>
+        <mj-text padding-top="5px" padding-bottom="0" font-style="italic" font-size="16px" font-weight="500" line-height="20px" color="#2D3748"> 
+          <ul align="left" style="list-style-type:disc; padding:0 0 0 20px; margin:10px 0;">
+            <li style="text-align: left; margin:0 0 10px;"><span style="font-weight:700;">De nouveaux projets passionnants :</span> des partenariats avec des entreprises, des conférences et ateliers afin d'allier théorie et pratique !</li>
+            <li style="text-align: left; margin:0 0 10px;"><span style="font-weight:700;">Des outils numériques performants :</span> nous avons mis en place de nouvelles plateformes en ligne pour faciliter vos apprentissages et vos échanges avec vos enseignants.</li>
+            <li style="text-align: left; margin:0;"><span style="font-weight:700;">Un accompagnement personnalisé :</span> comme toujours notre équipe pédagogique est à votre écoute pour répondre à vos questions et vous aider à réussir.</li>
+          </ul>
+        </mj-text>
+        <mj-text padding-bottom="0" font-style="italic" font-size="16px" font-weight="500" line-height="20px" color="#2D3748">Je suis personnellement heureux de vous retrouver pour cette année et je vous assure mon engagement total pour faire de votre cursus une réussite professionnelle et personnelle.</mj-text>
+        <mj-text padding-bottom="0" font-style="italic" font-size="16px" font-weight="500" line-height="20px" color="#2D3748">À très vite !</mj-text>
+      </mj-column>
+    </mj-section>
+    <mj-section background-color="#ffffff" padding-left="17px" padding-right="17px">
+      <mj-column width="30%" padding="8px">
+        <mj-image padding="0" border="none" fluid-on-mobile="true" target="_blank" src="https://i.ibb.co/PZRQQsp/news-E3-072024.jpg" href="https://ecosup-assurance.fr/cv-book/" alt="Couverture du nouveau CV Book avec de nouveaux étudiants"/>
+      </mj-column>
+      <mj-column width="70%" padding="8px">
+        <mj-text padding="0" align="left" font-size="14px" font-weight="900" color="#944694" line-height="18px" text-transform="uppercase">Actualités Ecosup</mj-text>
+        <mj-text padding="5px 0 0 0" align="left" font-size="20px" font-weight="700" line-height="24px" color="#684092">Nouvelle édition du CV Book... nouveaux Talents à découvrir</mj-text>
+        <mj-text padding="0" font-size="16px" line-height="20px" font-weight="400"> 
+          <p style="margin:10px 0;">EcoSup Assurance continue de briller, attirant un flux constant de nouveaux talents. Notre <span style="font-weight:700">CV Book actualisé</span> est une vitrine des candidats prometteurs prêts à devenir les forces vives de votre entreprise. Pour découvrir ces profils d'exception, n'hésitez pas à télécharger le <span style="font-weight:700">CV Book </span> code : <span style="font-weight:700">CVBOOK072024</span> .</p>
+          <p style="margin:10px 0;">Je reste à votre entière disposition pour discuter des candidats qui correspondent à vos besoins et aspirations.</p>
+        </mj-text>
+        <mj-text align="right" color="#BA4995" font-weight="700"><a href="https://ecosup-assurance.fr/cv-book/" style="color:#BA4995;text-decoration:none;" target="_blank">Télécharger...</a></mj-text>
+      </mj-column>
+    </mj-section>
+    <mj-section background-color="#ffffff" padding-left="17px" padding-right="17px">
+      <mj-column width="30%" padding="8px">
+        <mj-image padding="0" border="none" fluid-on-mobile="true" target="_blank" src="https://i.ibb.co/PZRQQsp/news-E3-072024.jpg" href="https://ecosup-assurance.fr/cv-book/" alt="Couverture du nouveau CV Book avec de nouveaux étudiants"/>
+      </mj-column>
+      <mj-column width="70%" padding="8px">
+        <mj-text padding="0" align="left" font-size="14px" font-weight="900" color="#944694" line-height="18px" text-transform="uppercase">Formation en Apprentissage</mj-text>
+        <mj-text padding="5px 0 0 0" align="left" font-size="20px" font-weight="700" line-height="24px" color="#684092">Une formation adaptée aux besoins des entreprises</mj-text>
+        <mj-text padding="0" font-size="16px" line-height="20px" font-weight="400">Notre programme pédagogique a été conçu en étroite collaboration avec les professionnels du secteur afin de vous proposer des étudiants aux compétences pointues et prêts à s'intégrer rapidement dans vos équipes. Cette année, nous avons mis l'accents sur :    
+          <ul align="left" style="list-style-type:disc; padding:0 0 0 20px; margin:10px 0;"> 
+            <li style="text-align:left; margin:0 0 10px;"><span style="font-weight:700;">Savoir-être :</span> une exigence particulière lors des entretiens et des ateliers, conférence et intervention tout au long du cursus pour allier formation théorique et savoir être en entreprise.</li>
+            <li style="text-align:left; margin:0 0 10px;"><span style="font-weight:700;">Digitalisation et entreprise responsable:</span> pour répondre aux besoins d'un marché en perpétuelle évolution, nos formations s'adaptent toujours sur les nouvelles technologies : intelligence artificielle, réseaux sociaux... mais également sur les valeurs de développement durable, RSE...</li>
+            <li style="text-align:left; margin:0;"><span style="font-weight:700;">Accompagagnement :</span> car nous savons depuis toujours chez Ecosup Campus que la clé d'une formation réussie est l'engagement sans faille de nos équipes dans l'accompagnement des élèves mais également un engagement à être toujours auprès de vous !</li>
+          </ul>
+        </mj-text>
+      </mj-column>
+    </mj-section>
     <mj-section background-color="#270938" padding="20px 32px">
       <mj-column width="320px">
         <mj-image width="140px" padding="0" border="none" align="center" target="_blank" src="https://i.ibb.co/8K8y4kW/ECOSUP-CAMPUS-Blanc012024.png" href="https://ecosup-campus.com" alt="Logo Ecosup Campus"/>
