--- a/mjml/index.mjml
+++ b/mjml/index.mjml
@@ -105,9 +105,19 @@
           <ul align="left" style="list-style-type:disc; padding:0 0 0 20px; margin:10px 0;"> 
             <li style="text-align:left; margin:0 0 10px;"><span style="font-weight:700;">Savoir-être :</span> une exigence particulière lors des entretiens et des ateliers, conférence et intervention tout au long du cursus pour allier formation théorique et savoir être en entreprise.</li>
             <li style="text-align:left; margin:0 0 10px;"><span style="font-weight:700;">Digitalisation et entreprise responsable:</span> pour répondre aux besoins d'un marché en perpétuelle évolution, nos formations s'adaptent toujours sur les nouvelles technologies : intelligence artificielle, réseaux sociaux... mais également sur les valeurs de développement durable, RSE...</li>
-            <li style="text-align:left; margin:0;"><span style="font-weight:700;">Accompagagnement :</span> car nous savons depuis toujours chez Ecosup Campus que la clé d'une formation réussie est l'engagement sans faille de nos équipes dans l'accompagnement des élèves mais également un engagement à être toujours auprès de vous !</li>
+            <li style="text-align:left; margin:0;"><span style="font-weight:700;">Accompagnement :</span> car nous savons depuis toujours chez Ecosup Campus que la clé d'une formation réussie est l'engagement sans faille de nos équipes dans l'accompagnement des élèves mais également un engagement à être toujours auprès de vous !</li>
           </ul>
         </mj-text>
+      </mj-column>
+    </mj-section>
+    <mj-section background-color="#ffffff" padding-left="17px" padding-right="17px">
+      <mj-column width="30%" padding="8px">
+        <mj-image padding="0" border="none" fluid-on-mobile="true" target="_blank" src="https://i.ibb.co/PZRQQsp/news-E3-072024.jpg" href="https://ecosup-assurance.fr/cv-book/" alt="Couverture du nouveau CV Book avec de nouveaux étudiants"/>
+      </mj-column>
+      <mj-column width="70%" padding="8px">
+        <mj-text padding="0" align="left" font-size="14px" font-weight="900" color="#944694" line-height="18px" text-transform="uppercase">Formation en Apprentissage</mj-text>
+        <mj-text padding="5px 0 0 0" align="left" font-size="20px" font-weight="700" line-height="24px" color="#684092">Des étudiants engagés et motivés</mj-text>
+        <mj-text padding="0" font-size="16px" line-height="20px" font-weight="400">13 étudiants en BTS Assurance et 11 en Bachelor Chargé de clientèles en Assurance et Banque... nos étudiants ont été sélectionnés avec rigueur et bénéficient d'un accompagnement personnalisé tout au long de leur cursus. Ils sont passionnés, curieux et soucieux d'acquérir une expérience professionnelle solide et de contribuer au développement de votre entreprise.</mj-text>
       </mj-column>
     </mj-section>
     <mj-section background-color="#270938" padding="20px 32px">
