--- a/pug/templates/_layout.pug
+++ b/pug/templates/_layout.pug
@@ -2,9 +2,6 @@ mjml
     mj-head
         mj-title Lettre Ecosup Assurance - Entreprise Août 2024
         mj-attributes
-            //-background-color
-            //- font
-            //- compoment
             mj-all(font-family='Arial, Helvetica, sans-serif')/
             mj-text(font-size='16px' font-weight='300' line-height='20px' color='#2D3748')/
         mj-raw.
@@ -38,9 +35,9 @@ mjml
         //- block form
         block form
             include ../includes/_form
-        //- block article3
-            block article3
-            include ../includes/_article3
+        //- block étudiant
+        block etudiant
+            include ../includes/_etudiant
         //- block article4
             block article4
             include ../includes/_article4
