mettre en place les blocs

--- a/pug/templates/_layout.pug
+++ b/pug/templates/_layout.pug
@@ -38,9 +38,9 @@ mjml
         //- block étudiant
         block etudiant
             include ../includes/_etudiant
-        //- block article4
-            block article4
-            include ../includes/_article4
+        //- block qualiopi
+        block qualiopi
+            include ../includes/_qualiopi
         //- block footer
         block footer
             include ../includes/_footer
