--- a/mjml/index.mjml
+++ b/mjml/index.mjml
@@ -68,16 +68,13 @@
         <mj-text padding-top="5px" padding-bottom="0" font-size="14px" font-weight="900" line-height="18px" text-transform="uppercase" color="#944694">Édito</mj-text>
         <mj-text padding-top="5px" padding-bottom="0" font-style="italic" font-size="20px" font-weight="700" line-height="24px" color="#684092">Un nouvelle promotion, de nouvelles opportunités : la rentrée 2024</mj-text>
         <mj-text padding-top="5px" padding-bottom="0" font-style="italic" font-size="16px" font-weight="500" line-height="20px" color="#2D3748">Chers partenaires,</mj-text>
-        <mj-text padding-top="5px" padding-bottom="0" font-style="italic" font-size="16px" font-weight="500" line-height="20px" color="#2D3748">C'est avec une grande satisfaction que nous accueillons dès ce mercredi 4 septembre une partie de nos nouvelles promotions d'étudiants qui intégrerons pour certains d'entre-eux vos entreprises. Nous sommes convaincus que cette nouvelle collaboration sera fructueuse pour tous.</mj-text>
-        <mj-text padding-top="5px" padding-bottom="0" font-style="italic" font-size="16px" font-weight="500" line-height="20px" color="#2D3748"> 
-          <ul align="left" style="list-style-type:disc; padding:0 0 0 20px; margin:10px 0;">
-            <li style="text-align: left; margin:0 0 10px;"><span style="font-weight:700;">De nouveaux projets passionnants :</span> des partenariats avec des entreprises, des conférences et ateliers afin d'allier théorie et pratique !</li>
-            <li style="text-align: left; margin:0 0 10px;"><span style="font-weight:700;">Des outils numériques performants :</span> nous avons mis en place de nouvelles plateformes en ligne pour faciliter vos apprentissages et vos échanges avec vos enseignants.</li>
-            <li style="text-align: left; margin:0;"><span style="font-weight:700;">Un accompagnement personnalisé :</span> comme toujours notre équipe pédagogique est à votre écoute pour répondre à vos questions et vous aider à réussir.</li>
-          </ul>
-        </mj-text>
-        <mj-text padding-bottom="0" font-style="italic" font-size="16px" font-weight="500" line-height="20px" color="#2D3748">Je suis personnellement heureux de vous retrouver pour cette année et je vous assure mon engagement total pour faire de votre cursus une réussite professionnelle et personnelle.</mj-text>
-        <mj-text padding-bottom="0" font-style="italic" font-size="16px" font-weight="500" line-height="20px" color="#2D3748">À très vite !</mj-text>
+        <mj-text padding-top="5px" padding-bottom="0" font-style="italic" font-size="16px" font-weight="500" line-height="20px" color="#2D3748">Mercredi 4 septembre, nous accueillerons une partie de nos nouvelles promotions d'étudiants. Certains d'entre eux intégreront vos entreprises et nous sommes persuadés que ce partenariat sera fructueux pour tous.</mj-text>
+        <mj-text padding-top="5px" padding-bottom="0" font-style="italic" font-size="16px" font-weight="500" line-height="20px" color="#2D3748">Notre programme pédagogique a été conçu en étroite collaboration avec les professionnels du secteur afin de former des étudiants compétents et prêts à intervenir rapidement au sein de vos équipes.</mj-text>
+        <mj-text padding-top="5px" padding-bottom="0" font-style="italic" font-size="16px" font-weight="500" line-height="20px" color="#2D3748">Pour allier formation théorique et aptitude au relationnel, nous accordons une importance particulière aux entretiens, ateliers, conférences et interventions.</mj-text>
+        <mj-text padding-top="5px" padding-bottom="0" font-style="italic" font-size="16px" font-weight="500" line-height="20px" color="#2D3748">Pour répondre aux besoins d'un marché en perpétuelle évolution, nos formations s'adaptent aux nouvelles technologies et privilégient les valeurs de développement durable, RSE… </mj-text>
+        <mj-text padding-top="5px" padding-bottom="0" font-style="italic" font-size="16px" font-weight="500" line-height="20px" color="#2D3748">Pour une formation réussie, les équipes d'ECOSUP Campus misent sur l'accompagnement sans faille des élèves mais également un engagement à être toujours auprès de vous.</mj-text>
+        <mj-text padding-top="5px" padding-bottom="0" font-style="italic" font-size="16px" font-weight="500" line-height="20px" color="#2D3748">Nos étudiants sont rigoureusement sélectionnés et bénéficient d'un suivi personnalisé tout au long de leur cursus. Nous sommes donc convaincus qu'ils manifesterons passion et curiosité avec le souci de contribuer au développement de votre entreprise.</mj-text>
+        <mj-text padding-top="5px" padding-bottom="0" font-style="italic" font-size="16px" font-weight="500" line-height="20px" color="#2D3748">N'hésitez pas à nous contacter pour toute question ou suggestion.</mj-text>
       </mj-column>
     </mj-section>
     <mj-section background-color="#ffffff" padding-left="17px" padding-right="17px">
@@ -86,12 +83,10 @@
       </mj-column>
       <mj-column width="70%" padding="8px">
         <mj-text padding="0" align="left" font-size="14px" font-weight="900" color="#944694" line-height="18px" text-transform="uppercase">Actualités Ecosup</mj-text>
-        <mj-text padding="5px 0 0 0" align="left" font-size="20px" font-weight="700" line-height="24px" color="#684092">Nouvelle édition du CV Book... nouveaux Talents à découvrir</mj-text>
-        <mj-text padding="0" font-size="16px" line-height="20px" font-weight="400"> 
-          <p style="margin:10px 0;">EcoSup Assurance continue de briller, attirant un flux constant de nouveaux talents. Notre <span style="font-weight:700">CV Book actualisé</span> est une vitrine des candidats prometteurs prêts à devenir les forces vives de votre entreprise. Pour découvrir ces profils d'exception, n'hésitez pas à télécharger le <span style="font-weight:700">CV Book </span> code : <span style="font-weight:700">CVBOOK072024</span> .</p>
-          <p style="margin:10px 0;">Je reste à votre entière disposition pour discuter des candidats qui correspondent à vos besoins et aspirations.</p>
-        </mj-text>
-        <mj-text align="right" color="#BA4995" font-weight="700"><a href="https://ecosup-assurance.fr/cv-book/" style="color:#BA4995;text-decoration:none;" target="_blank">Télécharger...</a></mj-text>
+        <mj-text padding="5px 0 0 0" align="left" font-size="20px" font-weight="700" line-height="24px" color="#684092">Entreprises partenaires nous avons besoin de vous ! </mj-text>
+        <mj-text padding="0" font-size="16px" line-height="20px" font-weight="400">Certains de nos étudiants(es) cherchent encore un contrat d'apprentissage. </mj-text>
+        <mj-text padding="0" font-size="16px" line-height="20px" font-weight="400">Découvrez leur profil, téléchargez et consultez notre CV Book.</mj-text>
+        <mj-text padding="0" font-size="16px" line-height="20px" font-weight="400">Partagez auprès de vos réseaux et donnez  une opportunité à ces jeunes !</mj-text>
       </mj-column>
     </mj-section>
     <mj-section background-color="#ffffff" padding-left="17px" padding-right="17px">
