--- a/pug/includes/_cvbook.pug
+++ b/pug/includes/_cvbook.pug
@@ -1,8 +1,8 @@
 mj-section(background-color='#ffffff' padding-left='17px' padding-right='17px')
     mj-column(width='30%' padding='8px')
-        mj-image(padding='0' border='none' fluid-on-mobile='true' target='_blank' src='https://i.ibb.co/PZRQQsp/news-E3-072024.jpg' href='https://ecosup-assurance.fr/cv-book/' alt='Couverture du nouveau CV Book avec de nouveaux étudiants')/
+        mj-image(padding='0' border='none' fluid-on-mobile='true' target='_blank' src='https://i.ibb.co/SmTfMy7/news-AE04-082024.jpg' href='https://ecosup-assurance.fr/cv-book/' alt='Couverture du nouveau CV Book avec de nouveaux étudiants')/
     mj-column(width='70%' padding='8px')
-        mj-text(padding='0' align='left' font-size='14px' font-weight='900' color='#944694' line-height='18px' text-transform='uppercase') Actualités Ecosup
+        mj-text(padding='0' align='left' font-size='14px' font-weight='900' color='#944694' line-height='18px' text-transform='uppercase') Apprentissage
         mj-text(padding='5px 0 0 0' align='left' font-size='20px' font-weight='700' line-height='24px' color='#684092') Entreprises partenaires nous avons besoin de vous ! 
         mj-text(padding='0' font-size='16px' line-height='20px' font-weight='400') Certains de nos étudiants(es) cherchent encore un contrat d'apprentissage. 
         mj-text(padding='0' font-size='16px' line-height='20px' font-weight='400') Découvrez leur profil, téléchargez et consultez notre CV Book.
