--- a/pug/includes/_qualiopi.pug
+++ b/pug/includes/_qualiopi.pug
@@ -1,6 +1,6 @@
 mj-section(background-color='#ffffff' padding-left='17px' padding-right='17px')
     mj-column(width='30%' padding='8px')
-        mj-image(padding='0' border='none' fluid-on-mobile='true' target='_blank' src='https://i.ibb.co/PZRQQsp/news-E3-072024.jpg' href='https://ecosup-assurance.fr/cv-book/' alt='Couverture du nouveau CV Book avec de nouveaux étudiants')/
+        mj-image(padding='0' border='none' fluid-on-mobile='true' src='https://i.ibb.co/mq3dGfn/news-AE03-082024.jpg' alt='Logo de la certification Qualiopi')/
     mj-column(width='70%' padding='8px')
         mj-text(padding='0' align='left' font-size='14px' font-weight='900' color='#944694' line-height='18px' text-transform='uppercase') Formation en Apprentissage
         mj-text(padding='5px 0 0 0' align='left' font-size='20px' font-weight='700' line-height='24px' color='#684092') Une formation adaptée aux besoins des entreprises
