--- a/mjml/index.mjml
+++ b/mjml/index.mjml
@@ -84,23 +84,21 @@
       <mj-column width="70%" padding="8px">
         <mj-text padding="0" align="left" font-size="14px" font-weight="900" color="#944694" line-height="18px" text-transform="uppercase">Apprentissage</mj-text>
         <mj-text padding="5px 0 0 0" align="left" font-size="20px" font-weight="700" line-height="24px" color="#684092">Entreprises partenaires nous avons besoin de vous ! </mj-text>
-        <mj-text padding="0" font-size="16px" line-height="20px" font-weight="400">Certains de nos étudiants(es) cherchent encore un contrat d'apprentissage. </mj-text>
-        <mj-text padding="0" font-size="16px" line-height="20px" font-weight="400">Découvrez leur profil, téléchargez et consultez notre CV Book.</mj-text>
-        <mj-text padding="0" font-size="16px" line-height="20px" font-weight="400">Partagez auprès de vos réseaux et donnez  une opportunité à ces jeunes !</mj-text>
+        <mj-text padding="5px 0 0 0" font-size="16px" line-height="20px" font-weight="400">Certains de nos étudiants(es) cherchent encore un <span style="font-weight:700;">contrat d'apprentissage</span>. Découvrez leur profil, téléchargez et consultez notre <a style="color:#2D3748;font-weight:700" href="https://ecosup-assurance.fr/cv-book/">CV Book code:</a>. Partagez auprès de vos réseaux et donnez  une opportunité à ces jeunes !</mj-text>
       </mj-column>
     </mj-section>
-    <mj-section background-color="#ffffff" padding-left="17px" padding-right="17px">
+    <mj-section background-color="#EDF2F7" padding-left="17px" padding-right="17px">
       <mj-column width="30%" padding="8px">
         <mj-image padding="0" border="none" fluid-on-mobile="true" src="https://i.ibb.co/brxf1tM/news-AE01-082024.jpg" alt="Étudiante en formation chez un courtier d'assurance"/>
       </mj-column>
       <mj-column width="70%" padding="8px">
         <mj-text padding="0" align="left" font-size="14px" font-weight="900" color="#944694" line-height="18px" text-transform="uppercase">Formation en Apprentissage</mj-text>
-        <mj-text padding="5px 0 0 0" align="left" font-size="20px" font-weight="700" line-height="24px" color="#684092">Une formation adaptée aux besoins des entreprises</mj-text>
-        <mj-text padding="0" font-size="16px" line-height="20px" font-weight="400">Notre programme pédagogique a été conçu en étroite collaboration avec les professionnels du secteur afin de vous proposer des étudiants aux compétences pointues et prêts à s'intégrer rapidement dans vos équipes. Cette année, nous avons mis l'accents sur :    
+        <mj-text padding="5px 0 0 0" align="left" font-size="20px" font-weight="700" line-height="24px" color="#684092">Des formations adaptées aux besoins des entreprises</mj-text>
+        <mj-text padding="5px 0 0 0" font-size="16px" line-height="20px" font-weight="400">Notre programme pédagogique a été conçu <span style="font-weight:700;">en étroite collaboration avec les professionnels du secteur</span> afin de vous proposer des étudiants aux compétences pointues et prêts à s'investir dans vos équipes. Cette année, nous avons mis l'accents sur :    
           <ul align="left" style="list-style-type:disc; padding:0 0 0 20px; margin:10px 0;"> 
-            <li style="text-align:left; margin:0 0 10px;"><span style="font-weight:700;">Savoir-être :</span> une exigence particulière lors des entretiens et des ateliers, conférence et intervention tout au long du cursus pour allier formation théorique et savoir être en entreprise.</li>
-            <li style="text-align:left; margin:0 0 10px;"><span style="font-weight:700;">Digitalisation et entreprise responsable:</span> pour répondre aux besoins d'un marché en perpétuelle évolution, nos formations s'adaptent toujours sur les nouvelles technologies : intelligence artificielle, réseaux sociaux... mais également sur les valeurs de développement durable, RSE...</li>
-            <li style="text-align:left; margin:0;"><span style="font-weight:700;">Accompagnement :</span> car nous savons depuis toujours chez Ecosup Campus que la clé d'une formation réussie est l'engagement sans faille de nos équipes dans l'accompagnement des élèves mais également un engagement à être toujours auprès de vous !</li>
+            <li style="text-align:left; margin:0 0 10px 0;"><span style="font-weight:700;">Le savoir-être :</span> une exigence particulière lors des entretiens et des ateliers, conférence et intervention tout au long du cursus pour allier formation théorique et savoir être en entreprise.</li>
+            <li style="text-align:left; margin:0 0 10px 0;"><span style="font-weight:700;">La digitalisation et l'entreprise responsable :</span> pour répondre aux besoins d'un marché en perpétuelle évolution, nos formations s'adaptent aux nouvelles technologies : intelligence artificielle, réseaux sociaux... mais également sur les valeurs de développement durable, RSE...</li>
+            <li style="text-align:left; margin:0;"><span style="font-weight:700;">L'accompagnement :</span> car nous savons depuis toujours chez Ecosup Assurance que la clé d'une formation réussie est l'engagement sans faille de nos équipes dans l'accompagnement des élèves mais également un engagement à être toujours auprès de vous !</li>
           </ul>
         </mj-text>
       </mj-column>
@@ -112,23 +110,19 @@
       <mj-column width="70%" padding="8px">
         <mj-text padding="0" align="left" font-size="14px" font-weight="900" color="#944694" line-height="18px" text-transform="uppercase">Formation en Apprentissage</mj-text>
         <mj-text padding="5px 0 0 0" align="left" font-size="20px" font-weight="700" line-height="24px" color="#684092">Des étudiants engagés et motivés</mj-text>
-        <mj-text padding="0" font-size="16px" line-height="20px" font-weight="400">13 étudiants en BTS Assurance et 11 en Bachelor Chargé de clientèles en Assurance et Banque... nos étudiants ont été sélectionnés avec rigueur et bénéficient d'un accompagnement personnalisé tout au long de leur cursus. Ils sont passionnés, curieux et soucieux d'acquérir une expérience professionnelle solide et de contribuer au développement de votre entreprise.</mj-text>
+        <mj-text padding="5px 0 0 0" font-size="16px" line-height="20px" font-weight="400"><span style="font-weight:700;">13 étudiants en BTS Assurance et 11 en Bachelor Chargé de clientèles en Assurance et Banque...</span> nos étudiants ont été sélectionnés selon des critères rigoureux et bénéficient d'un <span style="font-weight:700">accompagnement personnalisé</span> tout au long de leur cursus. Ils sont passionnés, curieux et soucieux d'acquérir une expérience professionnelle solide et de <span style="font-weight:700">contribuer au développement de votre entreprise</span>.</mj-text>
       </mj-column>
     </mj-section>
-    <mj-section background-color="#ffffff" padding-left="17px" padding-right="17px">
+    <mj-section background-color="#EDF2F7" padding-left="17px" padding-right="17px">
       <mj-column width="30%" padding="8px">
         <mj-image padding="0" border="none" fluid-on-mobile="true" src="https://i.ibb.co/mq3dGfn/news-AE03-082024.jpg" alt="Logo de la certification Qualiopi"/>
       </mj-column>
       <mj-column width="70%" padding="8px">
         <mj-text padding="0" align="left" font-size="14px" font-weight="900" color="#944694" line-height="18px" text-transform="uppercase">Formation en Apprentissage</mj-text>
-        <mj-text padding="5px 0 0 0" align="left" font-size="20px" font-weight="700" line-height="24px" color="#684092">Une formation adaptée aux besoins des entreprises</mj-text>
-        <mj-text padding="0" font-size="16px" line-height="20px" font-weight="400">Notre programme pédagogique a été conçu en étroite collaboration avec les professionnels du secteur afin de vous proposer des étudiants aux compétences pointues et prêts à s'intégrer rapidement dans vos équipes. Cette année, nous avons mis l'accents sur :    
-          <ul align="left" style="list-style-type:disc; padding:0 0 0 20px; margin:10px 0;"> 
-            <li style="text-align:left; margin:0 0 10px;"><span style="font-weight:700;">Savoir-être :</span> une exigence particulière lors des entretiens et des ateliers, conférence et intervention tout au long du cursus pour allier formation théorique et savoir être en entreprise.</li>
-            <li style="text-align:left; margin:0 0 10px;"><span style="font-weight:700;">Digitalisation et entreprise responsable:</span> pour répondre aux besoins d'un marché en perpétuelle évolution, nos formations s'adaptent toujours sur les nouvelles technologies : intelligence artificielle, réseaux sociaux... mais également sur les valeurs de développement durable, RSE...</li>
-            <li style="text-align:left; margin:0;"><span style="font-weight:700;">Accompagnement :</span> car nous savons depuis toujours chez Ecosup Campus que la clé d'une formation réussie est l'engagement sans faille de nos équipes dans l'accompagnement des élèves mais également un engagement à être toujours auprès de vous !</li>
-          </ul>
-        </mj-text>
+        <mj-text padding="5px 0 0 0" align="left" font-size="20px" font-weight="700" line-height="24px" color="#684092">À la recherche de l'excellence</mj-text>
+        <mj-text padding="5px 0 10px 0" font-size="16px" line-height="20px" font-weight="400"><span style="font-weight:700">La certification Qualiopi</span> est un gage de qualité pour les prestataires de formation en France, comme Ecosup Assurance. Elle atteste que l'organisme de formation <span style="font-weight:700;">respecte des normes rigoureuses</span>, ce qui est essentiel pour les apprenants qui recherchent des formations fiables et reconnues.</mj-text>
+        <mj-text padding="0 0 10px 0" font-size="16px" line-height="20px" font-weight="400"><span style="font-weight:700">Les sept critères du référentiel national de qualité,</span> que doit respecter Ecosup Assurance, sont conçus pour assurer une couverture complète des services de formation. </mj-text>
+        <mj-text padding="0 0 10px 0" font-size="16px" line-height="20px" font-weight="400">L'audit réalisé par un organisme certificateur accrédité est une étape cruciale pour valider la conformité d'Ecosup Assurance avec ces exigences, garantissant ainsi que les formations proposées sont de <span style="font-weight:700">haute qualité</span> et répondent aux <span style="font-weight:700">besoins actuels du marché de l'éducation et de la formation professionnelle</span>.</mj-text>
       </mj-column>
     </mj-section>
     <mj-section background-color="#270938" padding="20px 32px">
