--- a/pug/includes/_cvbook.pug
+++ b/pug/includes/_cvbook.pug
@@ -4,6 +4,4 @@ mj-section(background-color='#ffffff' padding-left='17px' padding-right='17px')
     mj-column(width='70%' padding='8px')
         mj-text(padding='0' align='left' font-size='14px' font-weight='900' color='#944694' line-height='18px' text-transform='uppercase') Apprentissage
         mj-text(padding='5px 0 0 0' align='left' font-size='20px' font-weight='700' line-height='24px' color='#684092') Entreprises partenaires nous avons besoin de vous ! 
-        mj-text(padding='0' font-size='16px' line-height='20px' font-weight='400') Certains de nos étudiants(es) cherchent encore un contrat d'apprentissage. 
-        mj-text(padding='0' font-size='16px' line-height='20px' font-weight='400') Découvrez leur profil, téléchargez et consultez notre CV Book.
-        mj-text(padding='0' font-size='16px' line-height='20px' font-weight='400') Partagez auprès de vos réseaux et donnez  une opportunité à ces jeunes !
+        mj-text(padding='5px 0 0 0' font-size='16px' line-height='20px' font-weight='400') Certains de nos étudiants(es) cherchent encore un #[span(style="font-weight:700;") contrat d'apprentissage]. Découvrez leur profil, téléchargez et consultez notre #[a(style="color:#2D3748;font-weight:700" href="https://ecosup-assurance.fr/cv-book/") CV Book code:]. Partagez auprès de vos réseaux et donnez  une opportunité à ces jeunes !
